--- a/src/components/pages/AdminAccount/admin.css
+++ b/src/components/pages/AdminAccount/admin.css
@@ -1,8 +1,11 @@
-.parcel{
+.attendance{
     flex: 5;
     background-color: aliceblue;
 }
 .leaflet-container {
     height: 100%;
+    width: 100%;
 }
-
+.swal2-container {
+    z-index: 20000 !important;
+  }
