--- a/src/components/pages/AdminAccount/admin.css
+++ b/src/components/pages/AdminAccount/admin.css
@@ -9,3 +9,6 @@
 .swal2-container {
     z-index: 20000 !important;
   }
+  .bold-header .MuiDataGrid-columnHeaderTitle {
+    font-weight: bold;
+  }
